--- a/plugins/classes/css/admin-class-categories.css
+++ b/plugins/classes/css/admin-class-categories.css
@@ -41,17 +41,17 @@
   padding-left: 5px;
 }
 
-.category-wrap tbody > tr .class-order-btn:hover,
+/*.category-wrap tbody > tr .class-order-btn:hover,
 .category-wrap tbody > tr .class-order-btn:focus {
   cursor: pointer;
-}
+}*/
 
 .category-wrap tbody > tr:first-child .class-order-btn-up {
   color: #888;
-  cursor: inherit;
+  pointer-events: none;
 }
 
 .category-wrap tbody > tr:last-child .class-order-btn-down {
   color: #888;
-  cursor: inherit;
+  pointer-events: none;
 }
