Update theme metadata

--- a/theme/style.css
+++ b/theme/style.css
@@ -1,14 +1,13 @@
 /*
- Theme Name:   UnderStrap Child
- Theme URI:    https://www.understrap.com
- Description:  UnderStrap Child Theme
- Author:       Holger Koenemann
- Author URI:   http://www.holgerkoenemann.de
+ Theme Name:   The Vera Project
+ Theme URI:    https://github.com/gmvi/vera-wordpress/
+ Description:  2018 Redesign
+ Author:       The Vera Project
+ Author URI:   http://www.theveraproject.org/
  Template:     understrap
- Version:      0.5.0
- License: GNU General Public License v2 or later
- License URI: http://www.gnu.org/licenses/gpl-2.0.html
+ Version:      alpha
+ License:      Code is licensed under GNU General Public License v2 or later in compliance with starter code. Assets remain property of The Vera Project unless otherwise noted.
+ License URI:  http://www.gnu.org/licenses/gpl-2.0.html
  Text Domain:  understrap-child
- Tags: one-column, custom-menu, featured-images, theme-options, translation-ready
- GitHub Theme URI: holger1411/understrap-child
+ Tags: one-column, custom-menu, featured-images, theme-options, translation-ready 
 */
