Introduce package-lock file

--- a/theme/style.css
+++ b/theme/style.css
@@ -1,7 +1,7 @@
 /*
- Theme Name:   The Vera Project
+ Theme Name:   The Vera Project 2018
  Theme URI:    https://github.com/gmvi/vera-wordpress/
- Description:  2018 Redesign
+ Description:  2018 Redesign of The Vera Project's website
  Author:       The Vera Project
  Author URI:   http://www.theveraproject.org/
  Template:     understrap
