--- a/sass/theme/_child_theme_variables.scss
+++ b/sass/theme/_child_theme_variables.scss
@@ -10,5 +10,9 @@
 // Color system
 //
 
-$primary: #7C008C;
+$primary: #D41C53;
+$accent: #96C0CE;
+$lightgray: C5C2D2;
+$darkgray: #4C4E56;
 
+$background: #FFF;
