--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -1,3 +1,20 @@
+// The Vera Project Website 2018 Redesign
+// 
+// Style Guide:
+// 
+// All SASS %placeholders are to be followed with instatiation like so:
+//   %header {
+//     content: "goes here";
+//   } .header { @extend: %header; }
+//
+//   .header-main {
+//     @extend: %header;
+//     content: "goes here";
+//   }
+// We should not have to guess whether a generic like .header is available
+
+/* Fonts */
+
 @font-face {
   font-family: BebasNeue;
   src: url('../fonts/BebasNeue-Regular.woff2') format('woff2'), 
@@ -5,21 +22,30 @@
     url('../fonts/BebasNeue-Regular.ttf') format('truetype');
 }
 
-/* Tags and Classes */
+@font-face {
+  font-family: GothicA1;
+  src: url('../fonts/GothicA1-Regular.ttf') format('truetype');
+}
+
+/* Plain Tags */
 
 body {
+	min-width: 960px;
+	max-width: 1440px;
+	margin: 0 auto;
 	color: $darkgray;
 	background-color: $background;
 }
 
-h3 {
-	font-weight: normal;
-	text-transform: uppercase;
+h1, h2, h3, h4, h5, h6 {
+	// h tags are for blind people and robots, not for styling
+	font-size: inherit;
+	font-weight: inherit;
+	margin: 0;
 }
 
-h3 b {
-	color: $primary;
-}
+/* Uncatagorized */
+// TODO: catagorize these
 
 .wrapper {
 	padding: 0;
@@ -35,7 +61,50 @@ h3 b {
 	text-align: center;
 }
 
-/* Specific Elements */
+a.more {
+	height: 24px;
+	font-family: BebasNeue;
+	font-size: 24px;
+	font-weight: bold;
+	letter-spacing: 1.5px;
+	color: inherit;
+	border-bottom: 2px solid $primary;
+}
+a.more:hover {
+	color: $primary;
+	border-bottom: none;
+	padding-bottom: 2px;
+}
+
+.label {
+	background-color: $primary;
+	color: white;
+	font-family: BebasNeue;
+	font-size: 18px;
+	line-height: 23px;
+	font-weight: 400;
+	letter-spacing: 1.5px;
+	display: inline-block;
+	padding: 2px 6px 0;
+}
+
+#content {
+	padding: 0;
+}
+
+article {
+	text-align: center;
+}
+
+article .wp-post-image {
+	width: 100%;
+	min-width: 960px;
+	max-width: 1440px;
+	height: 400px;
+	object-fit: cover;
+}
+
+/* Standard Bootstrap Navbar */
 
 .navbar {
 	margin: 0;
@@ -79,17 +148,58 @@ h3 b {
 	color: black;
 }
 
-#content {
-	padding: 0;
+/* Primary Title Area */
+
+/* Sections */
+
+%section {
+	padding: 90px 0 0px;
+} .section { @extend %section; }
+
+%header {
+	text-transform: uppercase;
+	font-family: BebasNeue;
+	font-size: 56px;
+	letter-spacing: 1.8px;
+	margin-bottom: 30px;
+
+	b {
+		font-weight: 600;
+		color: $primary;
+	}
+} .header { @extend %header; }
+
+%body {
+	font-family: GothicA1;
+	font-size: 24px;
+	color: black;
+	p {
+		width: 940px;
+		margin: 0 auto 40px;
+	}
 }
 
-article {
-	text-align: center;
+.section-main {
+	@extend %section;
+
+	.header-main {
+		@extend %header;
+	}
+	
+	.body-main {
+		@extend %body;
+	}
 }
 
-article .wp-post-image {
-	width: 100%;
-	height: 400px;
-	object-fit: cover;
-}
+.section-concerts {
+	@extend %section;
 
+	.header-concerts {
+		@extend %header;
+		font-size: 72px;
+	}
+	
+	.body-concerts {
+		@extend %body;
+	}
+}
